2007-03-06  Kai Blin  <kai.blin@gmail.com>
	* dom.py: Throw away old DOM and start implementing a new one. Most plugins
	  will be broken now.
	* plugins/ogrexml.py, ogrexml_plugin/parser.py, ogrexml_plugin/parser.py:
	  Parse/generate Ogre3D mesh.xml files
	* plugins/info.py: Adjust to the new DOM.
	
2007-02-12  Kai Blin  <kai.blin@gmail.com>
	* plugins/sear.py: Add default texture name.

2007-02-12  Kai Blin  <kai.blin@gmail.com>
	* plugins/sear.py: Export more stuff.

2007-02-01  Kai Blin  <kai.blin@gmail.com>
	* plugins/info.py, dom.py: output information about faces.
	* plugins/sear.py: fix a typo
	* collada_plugin/generator.py: Remove pretty-printing for prims, as it produced
	  misleading output.

2007-01-31  Kai Blin  <kai.blin@gmail.com>
	* plugins/info.py, collada_plugin/parser.py, dom.py: Output more
	  information.
	* plugins/sear.py: Add stubbed exporter for SearObjects.
	* collada_plugin/generator.py: Fix missing tags.

2007-01-30  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <convex_mesh>, <tri(angles|fans|strips)> and <extra> tags,
	  pretty-print <float_arrays> and <triangles>

2007-01-29  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Clean up
	  some code to make parser/generator more readable and avoid duplication

2007-01-29  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <technique_common>, <accessor> and <param> tags.

2007-01-26  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <polygon>, <polylist>, <ph> and <vcount> tags.

2007-01-25  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <linestrips> tag and fix up the <lines> tag generation

2007-01-25  Kai Blin  <kai.blin@gmail.com>